--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test-coverage": "jest --coverage",
     "dev": "ts-node-dev --respawn --transpile-only app.ts"
   },
   "author": "",
@@ -28,9 +29,15 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/http-errors": "^1.8.2",
+    "@types/jest": "^29.2.5",
     "@types/lodash": "^4.14.182",
     "@types/morgan": "^1.9.3",
-    "@types/node": "^17.0.35",
+    "@types/node": "^18.11.18",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.3.1",
+    "mongodb-memory-server": "^8.11.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.2"
   }
