--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "my-unsplash-express_be",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "jest",
     "test-coverage": "jest --coverage",
-    "dev": "ts-node-dev --respawn --transpile-only app.ts"
+    "dev": "ts-node-dev --respawn --transpile-only index.ts"
   },
   "author": "",
   "license": "ISC",
